<resources>
    <string name="app_name">Proyecto Clase 3</string>
    <string name="action_settings">Settings</string>
    <string name="lorem"> Donec id tempus ligula. Aliquam tempus tincidunt turpis, at tristique quam venenatis eu. Interdum et malesuada fames ac ante ipsum primis in faucibus. In hac habitasse platea dictumst. Nam quis libero ut magna tincidunt sagittis quis nec enim. Suspendisse maximus vel orci a pharetra. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Fusce sed leo vitae leo placerat mattis at finibus turpis.  </string>
    <string name="placeholder0">0</string>
    <string name="numeroa">Escribe numero A</string>
    <string name="sumar">Sumar</string>
    <string name="numerob">Escribe numero B</string>
    <string name="restar">Restar</string>
    <string name="errorb">El numero B esta vacio</string>

    <string name="number0">0</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number4">4</string>
    <string name="number5">5</string>
    <string name="number6">6</string>
    <string name="number7">7</string>
    <string name="number8">8</string>
    <string name="number9">9</string>
    <string name="punto">.</string>
    <string name="suma">+</string>
    <string name="resta">-</string>
    <string name="multi">*</string>
    <string name="igual">=</string>
    <string name="division">/</string>


</resources>
